--- a/server/database/config.json
+++ b/server/database/config.json
@@ -28,7 +28,7 @@
 		},
 		{
 			"name":"paciente", 
-			"config":"{\"nombre\":\"String\",\"apellido\":\"String\",\"direccion\":\"String\",\"localidad\":\"String\",\"provincia\":\"String\",\"fecha_nacimiento\":\"Date\",\"sexo\":\"String\",\"telefono\":\"String\",\"diagnostico\":\"String\",\"fecha_ingreso\":{\"type\":\"Date\",\"default\":\"now\"},\"fecha_alta\":\"Date\",\"estado\":{\"type\":\"Number\",\"default\":\"0\"}}",
+			"config":"{\"nombre\":\"String\",\"apellido\":\"String\",\"direccion\":\"String\",\"documento\":\"String\",\"localidad\":\"String\",\"provincia\":\"String\",\"fecha_nacimiento\":\"Date\",\"sexo\":\"String\",\"telefono\":\"String\",\"diagnostico\":\"String\",\"fecha_ingreso\":{\"type\":\"Date\",\"default\":\"now\"},\"fecha_alta\":\"Date\",\"estado\":{\"type\":\"Number\",\"default\":\"0\"}}",
 			"lang":"es"
 		}
 	]
